# lektor-shortcodes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
lektor_shortcodes/: __init__.py  scodes.py
tests/: __init__.py  test_lektor_integration.py  test_shortcodes.py
tests/fixtures/demo-site/: Demo Site.lektorproject
tests/fixtures/demo-site/configs/: shortcodes.ini
tests/fixtures/demo-site/content/: contents.lr
tests/fixtures/demo-site/templates/: page.html
